Revert "Fix overflow on landingpage"

--- a/app/routes/pages/components/LandingPage.css
+++ b/app/routes/pages/components/LandingPage.css
@@ -2,6 +2,7 @@
 
 .pageContainer {
   position: relative;
+  padding: 1em;
   margin-top: -2em;
 }
 
