--- a/app/routes/pages/components/PageDetail.css
+++ b/app/routes/pages/components/PageDetail.css
@@ -57,8 +57,9 @@
 }
 
 .mainTxt {
-  width: calc(100% - 5em);
-  padding: 2.5em 0 4em 2em;
+  width: 100%;
+  padding: 2.5em;
+  padding-bottom: 4em;
 }
 
 .action {
